--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-draw": "^0.20.6",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2"
   },
